test-cases/negative/test_010_invalid_import_path.lay
# negative test: invalid import path
# expected: error should be thrown - file not found

import nonexistent from 'nonexistent_file.lay'


